--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,15 @@
     </div>    
 </body>
 <script>
+
     function Keep() {
         let contactName = document.getElementById("cnName").value;
         let phoneNumber = document.getElementById("cnNumber").value;
         
-        alert(contactName && phoneNumber)
-        
+        // alert(contactName && phoneNumber)
+        let contact = {name: contactName, phone: phoneNumber};
+
+        // console.log(contact);
     }
 </script>
 </html>
